[gd_scene load_steps=18 format=2]

[ext_resource path="res://Scenes/Level.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Crosshair.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/textures/level/bg.png" type="Texture" id=4]
[ext_resource path="res://Scenes/Soldier.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Soldier_Shotgun.tscn" type="PackedScene" id=6]
[ext_resource path="res://Assets/fonts/kenvector_future.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://Assets/textures/level/explosion.png" type="Texture" id=8]
[ext_resource path="res://Scenes/Car.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scenes/weapons.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scenes/PowerUp_Health.tscn" type="PackedScene" id=11]
[ext_resource path="res://Assets/textures/Untitled-2.png" type="Texture" id=12]

[sub_resource type="Animation" id=1]
resource_name = "Explosion"
length = 2.0
loop = true
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Anim_Explosiones/Explosion:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Anim_Explosiones/Explosion:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ true, false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Anim_Explosiones/Explosion2:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.54, 1.22, 1.78 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Anim_Explosiones/Explosion3:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.81, 1.52, 1.86 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Anim_Explosiones/Explosion4:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.65, 0.89, 1.17, 1.43, 1.75, 1.98 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, false, true, false, true, false ]
}

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=3]
size = 50
outline_size = 10
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 7 )

[sub_resource type="Animation" id=4]
resource_name = "gameover"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("Fade:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 0 ), Color( 1, 0, 0, 1 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_to_menu"
} ]
}

[sub_resource type="Animation" id=5]
resource_name = "reset"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Fade:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 0 ) ]
}

[node name="Level" type="Node2D"]
position = Vector2( 368.661, 183.048 )
scale = Vector2( 1.10132, 1.10132 )
script = ExtResource( 1 )

[node name="Anim_Explosiones" type="AnimationPlayer" parent="."]
anims/Explosion = SubResource( 1 )

[node name="Explosion" type="AnimatedSprite" parent="Anim_Explosiones"]
position = Vector2( 191.736, 147.08 )
scale = Vector2( 0.568604, 0.568604 )
frames = SubResource( 2 )

[node name="Explosion2" type="AnimatedSprite" parent="Anim_Explosiones"]
position = Vector2( 1063.74, 175.08 )
scale = Vector2( 0.568604, 0.568604 )
frames = SubResource( 2 )

[node name="Explosion3" type="AnimatedSprite" parent="Anim_Explosiones"]
visible = false
position = Vector2( 685.736, 345.08 )
scale = Vector2( 0.568604, 0.568604 )
frames = SubResource( 2 )

[node name="Explosion4" type="AnimatedSprite" parent="Anim_Explosiones"]
position = Vector2( 871.736, 77.08 )
scale = Vector2( 0.568604, 0.568604 )
frames = SubResource( 2 )

[node name="Timer" type="Timer" parent="Anim_Explosiones"]
one_shot = true
autostart = true

[node name="Soldier_Shotgun" parent="." instance=ExtResource( 6 )]
position = Vector2( -39.303, 130.865 )
scale = Vector2( 0.7, 0.7 )
posiciones = [ Vector2( 883.817, 220.962 ), Vector2( 498.996, 269.828 ), Vector2( -39.303, 130.865 ) ]

[node name="Fondo Cubredor xD" type="Polygon2D" parent="."]
position = Vector2( -334.745, -166.208 )
scale = Vector2( 0.908001, 0.908001 )
color = Color( 0.298039, 0.298039, 0.298039, 1 )
polygon = PoolVector2Array( 196.967, 408.266, 419.692, 408.266, 417.91, 654.154, 209.44, 648.809 )

[node name="Soldier_Shotgun2" parent="." instance=ExtResource( 6 )]
position = Vector2( -170.609, 406.876 )
scale = Vector2( 0.674193, 0.674193 )
posiciones = [ Vector2( 329.628, 272.197 ) ]

[node name="Soldier" parent="." instance=ExtResource( 5 )]
position = Vector2( 67.1727, 414.456 )
scale = Vector2( 0.7, 0.7 )

[node name="bg" type="Sprite" parent="."]
position = Vector2( -326.812, -161.788 )
scale = Vector2( 0.748272, 0.578087 )
texture = ExtResource( 4 )
centered = false

[node name="Car" parent="." instance=ExtResource( 9 )]
position = Vector2( -334.251, 633.842 )
scale = Vector2( 0.627974, 0.627974 )

[node name="PU_Health" parent="." instance=ExtResource( 11 )]
position = Vector2( -222.773, 212.977 )
scale = Vector2( 0.356897, 0.356897 )
posiciones = [ Vector2( 1275.43, -50.344 ), Vector2( 565.372, -66.688 ), Vector2( 932.204, 681.505 ), Vector2( 116.819, 643.369 ), Vector2( -222.773, 212.977 ) ]

[node name="Crosshair" parent="." instance=ExtResource( 2 )]
position = Vector2( 540, 194.845 )

[node name="Colt" parent="Crosshair" instance=ExtResource( 10 )]
position = Vector2( 122.682, 183.886 )
scale = Vector2( 0.413098, 0.413098 )

[node name="UI" type="CanvasLayer" parent="."]

[node name="Player" parent="UI" instance=ExtResource( 3 )]
position = Vector2( 1702.16, 915.085 )
scale = Vector2( 0.372223, 0.372223 )

[node name="Score" type="Label" parent="UI"]
anchor_right = 0.151
margin_left = 19.9387
margin_top = 8.10709
margin_right = 334.939
margin_bottom = 93.1071
custom_fonts/font = SubResource( 3 )
text = "Score"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Health" type="Label" parent="UI"]
anchor_right = 0.151
margin_left = 485.915
margin_top = 6.98453
margin_right = 863.914
margin_bottom = 91.9845
custom_fonts/font = SubResource( 3 )
text = "Health"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ammo" type="Label" parent="UI"]
anchor_right = 0.151
margin_left = 25.915
margin_top = 988.985
margin_right = 403.914
margin_bottom = 1073.98
custom_fonts/font = SubResource( 3 )
text = "Ammo"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fade" type="ColorRect" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 1, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Untitled-2" type="Sprite" parent="UI"]
position = Vector2( 1457.32, 977.603 )
scale = Vector2( 0.83299, 0.83299 )
texture = ExtResource( 12 )

[node name="Anim_Fade" type="AnimationPlayer" parent="UI"]
autoplay = "reset"
anims/gameover = SubResource( 4 )
anims/reset = SubResource( 5 )
next/gameover = "reset"

[connection signal="timeout" from="Anim_Explosiones/Timer" to="." method="_on_Timer_timeout"]
